# parallel-u

./: .gitignore  FRONTEND_README.md  pyproject.toml  run_frontend.sh  streamlit_app.py
.streamlit/: config.toml
src/parallel_u/: __init__.py  config.py  schemas.py
src/parallel_u/api/: __init__.py  main.py
src/parallel_u/clients/: __init__.py  mino_client.py  openai_client.py
src/parallel_u/models/: schemas.py
src/parallel_u/services/: __init__.py  session_store.py
src/parallel_u/storage/: memory.py
