[project]
name = "parallel-u"
version = "0.1.0"
description = "Parallel U MVP backend"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "httpx",
  "beautifulsoup4",
  "python-dotenv",
]

[tool.uv]
dev-dependencies = [
  "black",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
